# Pixel-battle-backend

./: .dockerignore  .env-template  .env.template  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yml
assets/system-design/: raw.drawio
assets/system-desing/: raw.drawio
deployments/dev/: docker-compose.yaml
deployments/dev/backend/: Dockerfile  entrypoint.sh
deployments/dev/redis/: Dockerfile  create-cluster-if-not-exists.sh  redis.conf  start-cluster-creation-node.sh  start-node.sh
deployments/dev/redis/scripts/: is-cluster-ok.sh  start-cluster-creation-node.sh  try-to-create-cluster.sh
deployments/prod/: .env.template  conf.sh  deploy.sh  docker-compose.yaml  redeploy.sh  tools.sh
deployments/prod/backend/: Dockerfile
deployments/prod/certbot/: Dockerfile  refresh-ssl.sh  start-ssl-refresh.sh
deployments/prod/http-server/: nginx.conf
deployments/prod/https-server/: Dockerfile  backend.conf.template  nginx.conf  nginx.conf.template
deployments/prod/nginx/: nginx.conf
deployments/prod/redis/: Dockerfile  redis.conf
deployments/prod/redis/scripts/: create-cluster.sh
docs/system-design/: raw.drawio
redis/: create-cluster.sh  redis.conf
src/pixel_battle/application/ports/: broker.py  (+14 more)
src/pixel_battle/entities/: chunk.py  color.py  map.py  pixel.py  time.py  user.py
src/pixel_battle/infrastructure/: encoding.py  env.py  envs.py  types.py  view.py
src/pixel_battle_backend/entities/: pixel.py  position.py  time.py  user.py
tests/test_pixel_battle/: conftest.py
tests/test_pixel_battle/test_infrastructure/: conftest.py  test_encoding.py
tests/test_pixel_battle/test_presentation/: conftest.py
(+224 files in other folders)
